--- a/src/app/reactive/dinamicos/dinamicos.component.html
+++ b/src/app/reactive/dinamicos/dinamicos.component.html
@@ -1,1 +1,80 @@
-<p>dinamicos works!</p>
+<h2>Reactive: Dinámicos</h2>
+<hr>
+
+<form (ngSubmit)="guardar()" [formGroup]="miFormulario">
+    <!-- Nombre -->
+    <div class="row | mb-3">
+        <label class="col-sm-3 col-form-label">Nombre</label>
+
+        <div class="col-sm-9">
+            <input class="form-control"
+                   formControlName="nombre"
+                   placeholder="Nombre de la persona">
+            
+            <span class="form-text text-danger"
+                  *ngIf="campoEsValido('nombre')">
+                   Debe ser de 3 letras
+            </span>
+        </div>
+    </div>
+
+    <!-- Agregar favorito -->
+    <div class="row | mb-3">
+        <label class="col-sm-3 col-form-label">Agregar</label>
+
+        <div class="col-sm-9">
+            <div class="input-group">
+                <input class="form-control"
+                       [formControl]="nuevoFavorito"
+                       placeholder="Agregar favorito"
+                       (keyup.enter)="agregarFavorito()">
+                
+                <button class="btn btn-outline-primary | float-end"
+                        type="button"
+                        (click)="agregarFavorito()">
+                        Agregar
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Lista de juegos favoritos -->
+    <div class="row | mb-3">
+        <label class="col-sm-3 col-form-label">Favoritos</label>
+
+        <div class="col-sm-9" formArrayName="favoritos">
+            <div class="input-group | mb-1"
+                 *ngFor="let favorito of favoritosArr.controls; let i = index">
+
+                <input class="form-control"
+                       [formControlName]="i">
+
+                <button class="btn btn-outline-danger | float-end"
+                        type="button"
+                        (click)="borrar(i)">
+                        Eliminar
+               </button>
+            </div>
+        </div>
+    </div>
+
+    <div class="row | mb-3">
+        <div class="col-sm-12">
+            <button class="btn btn-primary | float-end"
+                    type="button"
+                    (click)="guardar()">
+                    Guardar
+            </button>
+        </div>
+    </div>
+</form>
+
+<span>Valid</span>
+<pre>{{miFormulario.valid}}</pre>
+
+<span>Value</span>
+<pre>{{miFormulario.value | json}}</pre>
+
+<span>Agregar juego</span>
+<pre>{{nuevoFavorito.valid}}</pre>
+<pre>{{nuevoFavorito.value | json}}</pre>
