--- a/src/app/reactive/switches/switches.component.html
+++ b/src/app/reactive/switches/switches.component.html
@@ -1,1 +1,87 @@
-<p>switches works!</p>
+<h2>Reactive: Switches</h2>
+<hr>
+
+<form (ngSubmit)="guardar()" [formGroup]="miFormulario">
+    <!-- Radio -->
+    <div class="row | mb-3">
+        <label class="col-sm-3 col-form-label">Género</label>
+
+        <div class="col-sm-9">
+            <div class="form-check">
+                <input class="form-check-input" 
+                       type="radio"
+                       value="M"
+                       formControlName="genero" 
+                       id="radioMasculino">
+
+                <label class="form-check-label" for="radioMasculino">
+                    Masculino
+                </label>
+            </div>
+            
+            <div class="form-check">
+                <input class="form-check-input" 
+                       type="radio" 
+                       value="F"
+                       formControlName="genero" 
+                       id="radioFemenino">
+
+                <label class="form-check-label" for="radioFemenino">
+                    Femenino
+                </label>
+            </div>
+        </div>
+    </div>
+
+    <!-- Switch -->
+    <div class="row | mb-3">
+        <label class="col-sm-3 col-form-label">Notificaciones</label>
+
+        <div class="col-sm-9">
+            <div class="form-check form-switch | mt-2">
+                <input class="form-check-input" 
+                       type="checkbox"
+                       formControlName="notificaciones" 
+                       id="flexSwitchCheckChecked">
+
+                <label class="form-check-label" for="flexSwitchCheckChecked">Quiero recibir notificaciones</label>
+            </div>
+        </div>
+    </div>
+
+    <!-- Check -->
+    <div class="row | mb-3">
+        <label class="col-sm-3 col-form-label"></label>
+
+        <div class="col-sm-9">
+            <div class="form-check">
+                <input class="form-check-input" 
+                       type="checkbox"
+                       formControlName="terminos"
+                       id="flexCheckDefault">
+
+                <label class="form-check-label" for="flexCheckDefault">
+                  Términos y condiciones de uso
+                </label>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <button class="btn btn-primary | float-end"
+                    type="submit">
+                    Guardar
+            </button>
+        </div>
+    </div>
+</form>
+
+<span>Valor de Formulario</span>
+<pre>{{miFormulario.value | json}}</pre>
+
+<span>Persona</span>
+<pre>{{persona | json}}</pre>
+
+<span>Valid</span>
+<pre>{{miFormulario.valid | json}}</pre>
