--- a/src/app/shared/sidemenu/sidemenu.component.html
+++ b/src/app/shared/sidemenu/sidemenu.component.html
@@ -25,3 +25,17 @@
         </li>
     </ul>
 </div>
+
+<div class="mt-5">
+    <h2>Validaciones</h2>
+    <hr>
+    
+    <ul class="list-group">
+        <li *ngFor="let item of authMenu"
+            class="list-group-item"
+            [routerLink]="[item.ruta]"
+            routerLinkActive="active">
+            {{item.texto}}
+        </li>
+    </ul>
+</div>
